k8s/web-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: malhaebang-web
  namespace: malhaebang
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: malhaebang-web
